--- a/app/view/about/about.phtml
+++ b/app/view/about/about.phtml
@@ -1,1 +1,89 @@
-<h1>ABOUT US</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-5 col-12 banner">
+			<h2>ABOUT US</h2>
+			<img src="/mywebsite.com/public/img/about_us.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipi allltscing elit. Donec pulvinar rabitur vel semper lectus. Fusce blandit felis quis turpis accumsan consequat. In eu arcu eget allerlorem posuere sapien id eniviverra, sit amet condimentum lorem volutpat. Mauris fermentum tortor.</p>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-7 col-12 banner">
+			<h2>LATEST NEWS</h2>
+			<time>22<span>JUNE</span></time>
+			<div class="extra-wrap">
+				<h3>Fusce blandit lectus at </h3>
+				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+			</div>
+			<time>22<span>JUNE</span></time>
+			<div class="extra-wrap">
+				<h3>Fusce blandit lectus at </h3>
+				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+			</div>
+			<time>22<span>JUNE</span></time>
+			<div class="extra-wrap">
+				<h3>Fusce blandit lectus at </h3>
+				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-12 col-sm-12 col-12 banner">
+			<h2>OUR ADVANTAGES</h2>
+			<p>Praesent egestas eleifend est, eget tristique quam. Nulla facilisi. Integer placerat nisi et pharetra fermentum. Etiam hendrerit placerat ullamcorper. Proin velit est, tristique tempus eu, mollis ac ligula.</p>
+			<ul>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+				<li>
+					<i class="fas fa-arrow-right"></i>
+					Fermentuma lorem ipsum dolor
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="workteam">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<h2>WORK TEAM</h2>
+				<div class="row">
+					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+						<figure>
+							<img src="/mywebsite.com/public/img/member1.jpg">
+						</figure>
+					</div>
+					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+						<figure>
+							<img src="/mywebsite.com/public/img/member2.jpg">
+						</figure>
+					</div>
+					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+						<figure>
+							<img src="/mywebsite.com/public/img/member3.jpg">
+						</figure>
+					</div>
+					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+						<figure>
+							<img src="/mywebsite.com/public/img/member4.jpg">
+						</figure>
+					</div>
+			</div>
+			</div>
+			
+		</div>
+	</div>
+</div>
