--- a/app/view/footer.phtml
+++ b/app/view/footer.phtml
@@ -1,7 +1,26 @@
     </div>
-    <div class="footer">
-        <p>Footer</p>
-    </div>
+    <footer class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-12 copyright">
+				<p>MERCIARDO AMUSEMENT PARK © 2019 | PRIVACY POLICY</p>
+			</div>
+			<div class="col-lg-5 col-12 address">
+				<i class="fas fa-map-marker-alt"></i>
+				<p> 28 JACKSON BLVD STE 1020,</p>
+				<p> CHICAGO, IL 60604-2340</p>
+			</div>
+			<div class="col-lg-3 col-12">
+				<a href="#"><i class="fas fa-search"></i></a>
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+				<a href="#"><i class="fab fa-tripadvisor"></i></a>
+			</div>
+		</div>
+	</div>
+    </footer>
     </body>   
 </html>
 
