--- a/app/view/header.phtml
+++ b/app/view/header.phtml
@@ -8,7 +8,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title><?= $this->viewData["pageTitle"] ?? 'error' ?></title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="/mywebsite.com/public/css/style.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+         <link href="/mywebsite.com/public/css/main.css" rel="stylesheet" type="text/css"/>
+        <link href="/mywebsite.com/public/css/ticket.css" rel="stylesheet" type="text/css"/>
+       
         <script src="/mywebsite.com/public/js/script.js" type="text/javascript"></script>
     </head>
     <body> 
@@ -20,9 +26,15 @@
           <li><a href="http://localhost:81/mywebsite.com/restaurants" 
                  class="webpage <?= preg_match("/restaurants/",$this->viewName) ? "active" : ''?>"
                  id="restaurant">Restaurants</a></li>
+          <li><a href="http://localhost:81/mywebsite.com/amusement" 
+                 class="webpage <?= preg_match("/amusement/",$this->viewName) ? "active" : '' ?>"
+                 id="amusement">Amusement</a></li>
           <li><a href="http://localhost:81/mywebsite.com/about" 
                  class="webpage <?= preg_match("/about/",$this->viewName) ? "active" : '' ?>"
                  id="about">About</a></li>
+           <li><a href="http://localhost:81/mywebsite.com/contact" 
+                 class="webpage <?= preg_match("/contact/",$this->viewName) ? "active" : '' ?>"
+                 id="contact">Contact</a></li>      
           <form action="" method="POST">
               <input type="text" placeholder="username..." name="login-uName">
               <input type="text" name="login-pass" placeholder="pass...">
