--- a/app/view/loading.phtml
+++ b/app/view/loading.phtml
@@ -1,3 +1,2 @@
-<div class="loading-wrapper">
- <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-</div>
+
+ <div class="lds-spinner loading-wrapper"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
