--- a/app/view/header.phtml
+++ b/app/view/header.phtml
@@ -7,14 +7,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title><?= $this->viewData["pageTitle"] ?? 'error' ?></title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-         <link href="/mywebsite.com/public/css/main.css" rel="stylesheet" type="text/css"/>
+	<link href="/mywebsite.com/public/css/animation.css" rel="stylesheet" type="text/css"/>
+        <link href="/mywebsite.com/public/css/main.css" rel="stylesheet" type="text/css"/>
         <link href="/mywebsite.com/public/css/ticket.css" rel="stylesheet" type="text/css"/>
-       
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="/mywebsite.com/public/js/script.js" type="text/javascript"></script>
     </head>
     <body> 
@@ -34,7 +34,7 @@
                  id="about">About</a></li>
            <li><a href="http://localhost:81/mywebsite.com/contact" 
                  class="webpage <?= preg_match("/contact/",$this->viewName) ? "active" : '' ?>"
-                 id="contact">Contact</a></li>      
+                 id="contact">Contact</a></li>
           <form action="" method="POST">
               <input type="text" placeholder="username..." name="login-uName">
               <input type="text" name="login-pass" placeholder="pass...">
@@ -43,12 +43,13 @@
               <button type="button"><a href="#">Forget pass ?</a></button>
           </form>
           <div class="search-container">
-            <form id="search-form" action="http://localhost:81/mywebsite.com/restaurants/search" method="POST">
+            <form autocomplete="off" id="search-form" action="http://localhost:81/mywebsite.com/restaurants/search" method="POST">
               <input type="text" placeholder="Search..." name="search" id="search-input">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <button type="submit"><i class="fa fa-search"></i></button>    
             </form>
-          </div>
+          </div>         
         </ul>
+        <div class="autocomplete-container"></div>
         <div class="page-content">
   
 
