--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,10 @@
-html {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-}
 *, *::before, *::after {
   box-sizing: inherit;
+}
+html {
+  box-sizing: border-box;
+ -webkit-tap-highlight-color: transparent; /* prevent blue highlighting when using touch events only works in chrome tho*/
+
 }
 a {
   text-decoration: none;
@@ -17,13 +18,16 @@ li{
 .page-content {
     width:100%;
     height:100%;
+    position:relative;
 }
+/* menu */
 ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  display:block;
 }
 ul.topnav li {float: left;}
 
@@ -64,6 +68,123 @@ ul.topnav li.right {float: right;}
 }
 .topnav .search-container button:hover {
   background: #ccc;
+}
+/*-----------------------------------------menu ends-----------------------------------------*/
+/* autocomplete */
+.autocomplete-container{
+    position:relative;
+    z-index:999;
+}
+.autocomplete {
+    width:235px;
+    padding:0px;
+    border: 1px solid black;
+    border-top:none;
+    position:absolute;
+    right:0;
+    background:#262626;
+    color:#E5E5E5;
+}
+.autocomplete-li:hover {
+    cursor: pointer;
+    background:#333;
+}
+/*-----------------------------------------Carousel-----------------------------------------------------*/
+.image-slider-wrapper {
+    width:100%;
+    margin: auto;
+    height: 800px;
+    overflow:hidden;
+    position:relative;
+}
+.image-slider-inner {
+    width:100%;
+    height:100%;
+    position:relative;
+}
+.image-slider-item:not(:nth-child(1)) {
+  display:none;
+}
+.image-slider-item {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+.image-slider-item img {
+    width:100%;
+    height:100%;
+}
+.slider-caption {
+    position:absolute;
+    bottom:10%;
+    left:50%;
+    transform: translateX(-50%);
+}
+.caption {
+    font-size:50px;
+    color:white;
+    text-shadow:black 0px 0px 10px;
+    text-align:center;
+}
+.slider-control {
+    position:absolute;
+    top:50%;
+    transform: translateY(-50%);
+    background:transparent;
+    border:none;
+    outline:none !important;
+    color:white;
+    opacity:0.2;
+    text-shadow:black 0px 0px 10px;
+    height:100%;
+    font-size:60px;
+    padding:10px;
+}
+.slider-control:hover {
+    cursor:pointer;
+}
+#prevButton:hover {
+    opacity:1;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.21) 68%, rgba(0,0,0,0.01) 99%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.21) 68%,rgba(0,0,0,0.01) 99%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.21) 68%,rgba(0,0,0,0.01) 99%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+#nextButton:hover {
+    opacity:1;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 */
+}
+#prevButton {
+    left:0px;
+}
+#nextButton {
+    right:0px;
+}
+.slider-indicators {
+    position:absolute;
+    bottom:5%;
+    left:50%;
+    transform: translateX(-50%);
+    display:grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-gap:5px;
+}
+.slider-indicator {
+    height:10px;
+    width:50px;
+    cursor:pointer;
+    background:white;
+    border:none;
+    outline:none !important;
+    transition: opacity 0.5s;
+}
+.slider-indicator:not(:nth-child(1)) {
+    opacity:0.5;
 }
 /*----------------------------------------This is CONTACT container---------------------------------------------*/
 .middle iframe{
@@ -127,138 +248,6 @@ ul.topnav li.right {float: right;}
   margin-left: -15px;
 }
 /*-------------------------------------------End of ABOUT US container-----------------------------------*/
-/*-----------------------This Is Carousel---------------------------------------------------------*/
-.image-slider-wrapper {
-    width:80%;
-    margin: 5px auto;
-    height: 800px;
-    -webkit-box-shadow: 0px 0px 20px 10px rgba(0,0,0,1);
-    -moz-box-shadow: 0px 0px 20px 10px rgba(0,0,0,1);
-    box-shadow: 0px 0px 20px 10px rgba(0,0,0,1);
-    overflow:hidden;
-    position:relative;
-}
-.image-slider-inner {
-    width:100%;
-    height:90%;
-    position:relative;
-}
-.image-slider-item {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-}
-.image-slider-item:not(:nth-child(1)) {
-  display:none;
-}
-.image-slider-item img {
-    width:100%;
-    height:100%;
-}
-.slider-image-indicator {
-    width:100%;
-    height:10%;
-    display:grid;
-    grid-template-columns: repeat(6,1fr);
-   
-}
-.slider-image-indicator img {
-    width:100%;
-    height:100%;
-    transition: opacity 0.5s;
-    object-fit: cover;
-}
-.slider-image-indicator img:hover {
-    cursor:pointer; /* hover cursor to prevent blue highlighting when using touch event */
-}
-.slider-image-indicator img:not(:nth-child(1)) {
-    opacity:0.6;
-}
-.slider-caption {
-    position:absolute;
-    bottom:10%;
-    left:50%;
-    transform: translateX(-50%);
-}
-.caption {
-    font-size:50px;
-    color:white;
-    text-shadow:black 0px 0px 10px;
-    text-align:center;
-}
-.slider-control {
-    position:absolute;
-    top:50%;
-    transform: translateY(-50%);
-    background:transparent;
-    border:none;
-    outline:none;
-    color:white;
-    opacity:0.2;
-    text-shadow:black 0px 0px 10px;
-    height:100%;
-    font-size:60px;
-    padding:10px;
-}
-.slider-control:hover {
-    cursor:pointer;
-}
-#prevButton:hover {
-    opacity:1;
-    background: -moz-linear-gradient(left, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.21) 68%, rgba(0,0,0,0.01) 99%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.21) 68%,rgba(0,0,0,0.01) 99%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.21) 68%,rgba(0,0,0,0.01) 99%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
-}
-#nextButton:hover {
-    opacity:1;
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 */
-}
-#prevButton {
-    left:0px;
-}
-#nextButton {
-    right:0px;
-}
-.slider-indicators {
-    position:absolute;
-    bottom:5%;
-    left:50%;
-    transform: translateX(-50%);
-    display:grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-gap:5px;
-}
-.slider-indicator {
-    height:10px;
-    width:50px;
-    cursor:pointer;
-    background:white;
-    border:none;
-    outline:none;
-    transition: opacity 0.5s;
-}
-.slider-indicator:not(:nth-child(1)) {
-    opacity:0.5;
-}
-.pause-unpause-button {
-    position: absolute;
-    top:1%;
-    left:5%;
-}
-.pause-unpause-button img {
-    width:50px;
-    height:50px;
-}
-.pause-unpause-button img:hover {
-    cursor:pointer;
-}
-/*----------------------------------End carousel-------------------------------------*/ 
 /*-------------------------------------------This is AMUSEMENT container---------------------------------*/
 .amusement h5{
   margin-left: -20px ;
@@ -503,9 +492,9 @@ ul.topnav li.right {float: right;}
 /*-------------------------------------------End of  RESTAURANT container--------------------------------*/
 /*-------------------------------------------This is FOOTER----------------------------------------------*/
 .footer{
-  background-color: #49af68;
-  opacity: 0.8;
-  margin-top: 50px;
+  background-color: #4CAF4F;
+  opacity: 1;
+  margin-top: 50px; 
 }
 .footer a{
   color: white;
@@ -529,16 +518,15 @@ ul.topnav li.right {float: right;}
   align-items: center;
 }
 /* loading */
-.loading-wrapper {
-    width:100%;
-    display:none;
-}
 .lds-spinner {
   color: official;
-  display: inline-block;
-  position: relative;
-  width: 64px;
-  height: 64px;
+  display:none;
+  position: absolute;
+  width:64px;
+  height:64px;
+  left:50%;
+  top:50%;
+  transform:translate(-50%,-50%);
 }
 .lds-spinner div {
   transform-origin: 32px 32px;
@@ -553,7 +541,7 @@ ul.topnav li.right {float: right;}
   width: 5px;
   height: 14px;
   border-radius: 20%;
-  background: #666666;
+  background: #666;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
@@ -658,28 +646,6 @@ ul.topnav li.right {float: right;}
     text-align: center;
   }
 }
-@media screen and (max-width:480px) {
-    .caption {
-        font-size: 30px;
-    }
-    .slider-control {
-        font-size:30px;
-    }
-    .pause-unpause-button img {
-        width:30px;
-        height:30px;
-    }
-}
-@media screen and (max-height: 850px) {
-    .image-slider-wrapper {
-        height:95vh;
-    }
-}
-@media screen and (max-height:400px) {
-     .caption {
-        font-size: 25px;
-    }
-}
 @media only screen and (max-width: 992px){
   .restaurant .restaurant-main{
     border:0;
@@ -701,6 +667,28 @@ ul.topnav li.right {float: right;}
   .middle form textarea{
     margin-top: 0px;
   }
+}
+@media screen and (max-width:480px) {
+    .caption {
+        font-size: 30px;
+    }
+    .slider-control {
+        font-size:30px;
+    }
+    .pause-unpause-button img {
+        width:30px;
+        height:30px;
+    }
+}
+@media screen and (max-height: 850px) {
+    .image-slider-wrapper {
+        height:95vh;
+    }
+}
+@media screen and (max-height:400px) {
+     .caption {
+        font-size: 25px;
+    }
 }
 /*------------------------------------------End of FOOTER-------------------------------------------------*/
 
