--- a/app/view/header.phtml
+++ b/app/view/header.phtml
@@ -15,7 +15,7 @@
         <link href="/mywebsite.com/public/css/ticket.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="/mywebsite.com/public/js/script.js" type="text/javascript"></script>
+        <script async src="/mywebsite.com/public/js/script.js" type="text/javascript"></script>
     </head>
     <body> 
         <ul class="topnav">
