fix the damn search function

--- a/app/view/about/about.phtml
+++ b/app/view/about/about.phtml
@@ -1,89 +1,206 @@
 <div class="container">
-	<div class="row">
-		<div class="col-lg-4 col-md-6 col-sm-5 col-12 banner">
-			<h2>ABOUT US</h2>
-			<img src="/mywebsite.com/public/img/about_us.jpg">
-			<p>Lorem ipsum dolor sit amet, consectetur adipi allltscing elit. Donec pulvinar rabitur vel semper lectus. Fusce blandit felis quis turpis accumsan consequat. In eu arcu eget allerlorem posuere sapien id eniviverra, sit amet condimentum lorem volutpat. Mauris fermentum tortor.</p>
-		</div>
-		<div class="col-lg-4 col-md-6 col-sm-7 col-12 banner">
-			<h2>LATEST NEWS</h2>
-			<time>22<span>JUNE</span></time>
-			<div class="extra-wrap">
-				<h3>Fusce blandit lectus at </h3>
-				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
-			</div>
-			<time>22<span>JUNE</span></time>
-			<div class="extra-wrap">
-				<h3>Fusce blandit lectus at </h3>
-				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
-			</div>
-			<time>22<span>JUNE</span></time>
-			<div class="extra-wrap">
-				<h3>Fusce blandit lectus at </h3>
-				<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+	<div class="row ">
+		<div class="col-xl-4 col-lg-5 col-12 banner">
+			<div class="banner-container" id="banner-1">
+				<h2>ABOUT US</h2>
+				<img src="/mywebsite.com/public/img/about_us.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipi allltscing elit. Donec pulvinar rabitur vel semper lectus. Fusce blandit felis quis turpis accumsan consequat. In eu arcu eget allerlorem posuere sapien id eniviverra, sit amet condimentum lorem volutpat. Mauris fermentum tortor.</p>
 			</div>
 		</div>
-		<div class="col-lg-4 col-md-12 col-sm-12 col-12 banner">
-			<h2>OUR ADVANTAGES</h2>
-			<p>Praesent egestas eleifend est, eget tristique quam. Nulla facilisi. Integer placerat nisi et pharetra fermentum. Etiam hendrerit placerat ullamcorper. Proin velit est, tristique tempus eu, mollis ac ligula.</p>
-			<ul>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-				<li>
-					<i class="fas fa-arrow-right"></i>
-					Fermentuma lorem ipsum dolor
-				</li>
-			</ul>
+		<div class="col-xl-4 col-lg-7 col-12 banner">
+			<div class="banner-container" id="banner-2">
+				<h2>LATEST NEWS</h2>
+				<time>22<span>JUNE</span></time>
+				<div class="extra-wrap">
+					<h3>Fusce blandit lectus at </h3>
+					<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+				</div>
+				<time>22<span>JUNE</span></time>
+				<div class="extra-wrap">
+					<h3>Fusce blandit lectus at </h3>
+					<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+				</div>
+				<time>22<span>JUNE</span></time>
+				<div class="extra-wrap">
+					<h3>Fusce blandit lectus at </h3>
+					<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-xl-4 col-12 banner">
+			<div class="banner-container" id="banner-3">
+				<h2>OUR ADVANTAGES</h2>
+				<p>Praesent egestas eleifend est, eget tristique quam. Nulla facilisi. Integer placerat nisi et pharetra fermentum. Etiam hendrerit placerat ullamcorper. Proin velit est, tristique tempus eu, mollis ac ligula.</p>
+				<ul>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fas fa-arrow-right"></i>
+							Fermentuma lorem ipsum dolor
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
-<div class="workteam">
+<div class="team-member">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
 				<h2>WORK TEAM</h2>
 				<div class="row">
-					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+					<div class="col-lg-3 col-6">
 						<figure>
 							<img src="/mywebsite.com/public/img/member1.jpg">
+							<h5>EVA ADAMSON</h5>
+							<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristi.</p>
 						</figure>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+					<div class="col-lg-3 col-6">
 						<figure>
 							<img src="/mywebsite.com/public/img/member2.jpg">
+							<h5>EVA ADAMSON</h5>
+							<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristi.</p>
 						</figure>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+					<div class="col-lg-3 col-6">
 						<figure>
 							<img src="/mywebsite.com/public/img/member3.jpg">
+							<h5>EVA ADAMSON</h5>
+							<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristi.</p>
 						</figure>
 					</div>
-					<div class="col-lg-3 col-md-3 col-sm-6 col-12">
+					<div class="col-lg-3 col-6">
 						<figure>
 							<img src="/mywebsite.com/public/img/member4.jpg">
+							<h5>EVA ADAMSON</h5>
+							<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristi.</p>
 						</figure>
 					</div>
+				</div>
 			</div>
-			</div>
-			
 		</div>
 	</div>
 </div>
+<div class="advantage">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-md-6 col-12">
+				<div class="advantage-one">
+					<h3><strong>OUR RULES</strong></h3>
+					<span>1</span>
+					<div class="extra-wrap">
+						<strong>FUSCE BLANDIT LECTUS AT</strong>
+						<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+					</div>
+					<span>2</span>
+					<div class="extra-wrap">
+						<strong>FUSCE BLANDIT LECTUS AT</strong>
+						<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+					</div>
+					<span>3</span>
+					<div class="extra-wrap">
+						<strong>FUSCE BLANDIT LECTUS AT</strong>
+						<p>Praesent egestas eleifend est, eget tristique placerat ullamcorper. Proin velit est, tristiue eu, mollis ac ligula liquam ultricies.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6 col-12">
+				<div class="advantage-two">
+					<h3><strong>WHY CHOOSE US</strong></h3>
+					<p>Aliquam eleifend vel velit sit amet interdum. Nullam id elit accumsan lorem adipiscing gravida ac nec neque. Maecenas iaculis enim massa, vel tincidunt nisi laoreet a. Suspendisse commodo ipsum non inte.</p>
+					<ul>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fas fa-arrow-right"></i>
+								Fermentuma lorem ipsum dolor
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-lg-4 col-12">
+				<div class="advantage-three">
+					<h3><strong>TESTIMONIALS</strong></h3>
+					<span><img src="/mywebsite.com/public/img/quote.png"></span>
+					<div class="extra-wrap">
+						<p>Aliquam eleifend vel velit sit amet interdum. Nullam id elit accumsan lorem adipiscing gravida ac nec neque. Maecenas iaculis enim massa, vel tincidunt nisi laoreet a. Suspendisse commodo ipsum non rdum cursus. Maecenas rutrum facilisis enim, at feugiat est. Vestibulum.</p>
+						<strong>MARIA BROOKS, USA</strong>
+					</div>
+					<span><img src="/mywebsite.com/public/img/quote.png"></span>
+					<div class="extra-wrap">
+						<p>Aliquam eleifend vel velit sit amet interdum. Nullam id elit accumsan lorem adipiscing gravida ac nec neque. Maecenas iaculis enim massa, vel tincidunt nisi laoreet a. Suspendisse commodo ipsum non rdum cursus. Maecenas rutrum facilisis enim, at feugiat est. Vestibulum.</p>
+						<strong>MARIA BROOKS, USA</strong>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br><br><br>
