--- a/app/view/restaurants/detail.phtml
+++ b/app/view/restaurants/detail.phtml
@@ -1,15 +1,45 @@
-<div class="restaurant" >
-    <?php $res = $this->viewData["detail"] ?>
-    <?php if ($res != "No results found"):?>
-    <div class="resInfo">
-        <img src="<?= $res[0]["image"] ?>">
-        <h4><?= $res[0]["name"] ?></h4>
-        <p><?= $res[0]["openTime"] ?></p>
-        <p><?= $res[0]["location"]?></p>
-        <p><?= $res[0]["description"] ?></p>
-    </div>
-    <?php else: ?>
-    <p><?= $res ?></p>
-    <?php endif;?>
+ <?php $res = $this->viewData["detail"] ?>
+<?php if ($res != "No results found"):?>
+<div class="restaurant-item-title">
+	<i class="fas fa-star star-one"></i>
+	<i class="fas fa-star star-two"></i>
+	<i class="fas fa-star star-three"></i>
+	<h1><?= $res[0]["name"] ?></h1>
+	<i class="fas fa-star star-three"></i>
+	<i class="fas fa-star star-two"></i>
+	<i class="fas fa-star star-one"></i>	
 </div>
-
+<div class="restaurant-item">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-7 col-12">
+				<div id="carousel" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img class="d-block w-100" src="<?= $res[0]["image"] ?>" >
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="" alt="nopicture" >
+				    </div>
+				  </div>
+				  <div class="carousel-indicator">
+				  	<span class="carousel-indicator-item-1">
+				  		<i class="fas fa-circle" class="active"></i>
+				  	</span>
+				  	<span class="carousel-indicator-item-2">
+				  		<i class="fas fa-circle" ></i>
+				  	</span>
+				  </div>
+				</div>
+			</div>
+			<div class="col-md-5 col-12 restaurant-item-text">
+				<p><?= $res[0]["description"] ?></p>
+				<p><strong>Opening times: </strong><?= $res[0]["openTime"] ?></p><br>
+				<p><strong>Location: </strong><?= $res[0]["location"]?></p>
+			</div>
+		</div>
+	</div>
+</div>
+<?php else: ?>
+<p><?= $res ?></p>
+<?php endif;?>
