--- a/app/view/restaurants/index.phtml
+++ b/app/view/restaurants/index.phtml
@@ -12,6 +12,13 @@
         <div class="row">
             <div class="col-md-3 col-12">
 				<ul>
+                                    <li class="search-bar">
+                                        <form autocomplete="off" id="search-form" action="http://localhost:81/mywebsite.com/restaurants" method="POST">
+                                            <input type="text" placeholder="Search..." name="search" id="search-input">
+                                            <button type="submit"><i class="fas fa-search"></i></button>    
+                                        </form>						
+				    </li>
+                                    <div class="autocomplete-container"></div>
 					<li>
 						<h5>RESTAURANTS</h5>
 						<label class="custom-checkbox">Eat clean, eat fun
@@ -74,17 +81,32 @@
             <div class="restaurant-main">
                 <a class="restaurant-detail"
                    href="/mywebsite.com/restaurants/detail/<?= $res["urlName"] ?>">
-                   <img src="<?= $res["image"] ?>" class="restaurant-image">
+                   <img src="<?= $res["image"] ?>" class="restaurant-image" >
                 </a>
                 <div class="extra-wrap">
                     <h3><a  class="restaurant-detail"
                         href="/mywebsite.com/restaurants/detail/<?= $res["urlName"] ?>">
-                        <?= $res["name"] ?>
+                        <?= $res["name"]?>
                         </a>
                     </h3>
-                    <p><strong>Opening times: <?= $res["openTime"] ?></strong></p>
-                    <p><?= $res["description"] ?></p>
-                    <p><strong>Location: </strong><?= $res["location"]?></p>
+                    <p><strong>Opening times: </strong>
+                        <?php if (!empty($_GET["q"])):?>
+                        <?= preg_replace('/' . preg_quote($_GET["q"]) . '/i', '<b><span class="search-highlight">$0</span></b>',$res["openTime"]); ?>
+                        <?php else: echo $res["openTime"] ?>
+                        <?php endif;?>
+                    </p>
+                    <p>
+                       <?php if (!empty($_GET["q"])):?>
+                       <?= preg_replace('/' . preg_quote($_GET["q"]) . '/i', '<b><span class="search-highlight">$0</span></b>', $res["description"]); ?>
+                       <?php else: echo $res["description"] ?>
+                       <?php endif;?>
+                    </p>
+                    <p><strong>Location: </strong>
+                       <?php if (!empty($_GET["q"])):?>
+                       <?= preg_replace('/' . preg_quote($_GET["q"]) . '/i', '<b><span class="search-highlight">$0</span></b>', $res["location"]);?>
+                       <?php else: echo $res["location"] ?>
+                       <?php endif;?>
+                    </p>
                 </div>
             </div>
             <?php endforeach;?>
