--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,7 +81,8 @@ ul.topnav li.right {float: right;}
     border: 1px solid black;
     border-top:none;
     position:absolute;
-    right:0;
+    left:-20px;
+    top: -20px;
     background:#262626;
     color:#E5E5E5;
 }
@@ -217,9 +218,15 @@ ul.topnav li.right {float: right;}
 }
 /*--------------------------------------------End of CONTACT container---------------------------------------------*/
 /*--------------------------------------------This is ABOUT US container-------------------------------------------*/
-.banner{
-  border:0;
+.banner .banner-container{
   border-bottom: 3px solid #e4785c;
+  height: 450px;
+}
+.banner h2{
+  margin-bottom: 20px;
+}
+.banner p{
+  font-size: 14px;
 }
 .banner time{
     font-size:31px;
@@ -242,13 +249,142 @@ ul.topnav li.right {float: right;}
   color: #a4a4a4;
   margin:-5px 0 10px;
 }
+.banner img{
+  width: 100%;
+}
 .banner li{
   list-style: none;
   padding-top:5px;
-  margin-left: -15px;
+  margin-left: -25px;
+  font-size: 14px;
+}
+.team-member{
+  margin-top: 30px;
+  background: url("/mywebsite.com/public/img/park.jpg") center fixed no-repeat;
+  background-size: 100% 100%;
+  height: 600px;
+  color: white;
+  display:flex;
+  align-items: center;
+  text-shadow: 2px 2px 4px #000000;
+}
+.team-member h2{
+  text-align: center;
+  margin-bottom: 25px;
+}
+.team-member p{
+  font-size: 13px;
+}
+.team-member figure{
+  border-bottom: 3px solid #e4785c;
+}
+.advantage{
+  margin-top: 30px;
+  font-size: 14px;
+}
+.advantage .advantage-one span{
+  width: 60px;
+  height: 60px;
+  font-size: 40px;
+  margin-right: 22px;
+  float: left;
+  text-align: center;
+  background-color: #e7755b;
+  border-radius: 60px;
+  color: white;
+  font-weight: bold;
+}
+.advantage .extra-wrap{
+  overflow: auto;
+}
+.advantage .advantage-one .extra-wrap strong{
+  color: #a4a4a4;
+  margin-bottom: 5px;
+  display: block;
+}
+.advantage h3{
+  margin-bottom: 20px;
+}
+.advantage .advantage-two a{
+  color: black;
+  margin-bottom: 10px;
+  display: block;
+  margin-left: -30px;
+}
+.advantage .advantage-two a:hover{
+  color: #428bca;
+}
+.advantage .advantage-three span{
+  width: 20px;
+  margin-right: 30px;
+  float: left;
+  text-align: center;
+}
+.advantage .advantage-three .extra-wrap strong{
+  margin-top: -10px;
+  margin-bottom: 15px;
+  display: block;
+}
+.advantage-one, .advantage-two, .advantage-three{
+  border-bottom: 3px solid #e4785c;
+  height: 400px;
+}
+@media only screen and (max-width: 1200px){
+  .banner .banner-container{
+    height: 400px;
+  }
+  .banner #banner-3{
+    height: 350px;
+  }
+  .advantage-one, .advantage-two, .advantage-three{
+    height: 500px;
+  }
+}
+@media only screen and (max-width: 992px){
+  .banner #banner-1{
+    height: 550px;
+  }
+  .banner #banner-2{
+    margin-top: 30px;
+  }
+  .banner #banner-3{
+    margin-top: 30px;
+  }
+  .team-member{
+    height: 800px; 
+  }
+  .advantage-one, .advantage-two{
+    height: 440px;
+  }
+  .advantage-three{
+    margin-top: 30px;
+    height: 280px;
+  }
+}
+@media only screen and (max-width: 768px){
+  .advantage-one{
+    height: 330px;
+  }
+  .advantage-two{
+    height: 370px;
+    margin-top: 30px;
+  }
+  .advantage-three{
+    height: 340px;
+  }
+}
+@media only screen and (max-width: 576px){
+  .advantage-one{
+    height: 380px;
+  }
 }
 /*-------------------------------------------End of ABOUT US container-----------------------------------*/
 /*-------------------------------------------This is AMUSEMENT container---------------------------------*/
+.amusement .search-bar input{
+  margin-bottom: 20px;
+  margin-left: -20px;
+  width: 90%;
+}
 .amusement h5{
   margin-left: -20px ;
   margin-bottom: 5px;
@@ -316,9 +452,8 @@ ul.topnav li.right {float: right;}
 }
 .amusement .by-height label{
   display: block;
-
+  overflow: hidden;
 }
-
 .amusement label:last-child{
   margin-bottom: 25px;
 }
@@ -373,8 +508,61 @@ ul.topnav li.right {float: right;}
 .amusement .amusement-main:hover .amusement-image-container{
   opacity: 1;
 }
+
 /*-------------------------------------------End of AMUSEMENT container----------------------------------*/
+/*-------------------------------------------This is AMUSEMENT-ITEM container----------------------------*/
+.amusement-item-title{
+  text-align: center;
+}
+.amusement-item-title i{
+  color: #ffc342;
+  padding-right: 3px;
+}
+.amusement-item-title .star-one{
+  font-size: 10px;
+}
+.amusement-item-title .star-two{
+  font-size: 12px;
+}
+.amusement-item-title .star-three{
+  font-size: 14px;
+}
+.amusement-item-title h1{
+  color: #23355e;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: inline;
+}
+.amusement-item{
+  margin-top: 30px;
+}
+.amusement-item .carousel .carousel-indicator {
+  text-align: center;
+  margin-top: 25px;
+}
+.amusement-item .carousel .carousel-indicator .carousel-indicator-item-1,.amusement-item .carousel .carousel-indicator .carousel-indicator-item-2,.amusement-item .carousel .carousel-indicator .carousel-indicator-item-3{
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 12px;
+  cursor: pointer;
+}
+.amusement-item-text{
+  font-size: 18px;
+}
+.active-item{
+  opacity: 1;
+}
+.disable-item{
+  opacity: 0.6
+}
+/*-------------------------------------------End of AMUSEMENT-ITEM container-----------------------------*/
 /*-------------------------------------------This is RESTAURANT container--------------------------------*/
+.restaurant .search-bar input{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: -20px;
+  width: 90%;
+}
 .restaurant-title{
   text-align: center;
 }
@@ -489,7 +677,70 @@ ul.topnav li.right {float: right;}
   overflow: auto;
   font-size: 14px;
 }
+@media only screen and (max-width: 992px){
+  .restaurant .restaurant-main{
+    border:0;
+  }
+  .restaurant .restaurant-main .extra-wrap{
+    display: none;
+  }
+  .restaurant .restaurant-main .restaurant-image{
+    width: 100%;
+    margin-bottom: 30px;
+    border-top: 1px solid green;
+    padding-top: 20px;
+  }
+}
 /*-------------------------------------------End of  RESTAURANT container--------------------------------*/
+/*-------------------------------------------This is RESTAURANT-ITEM container---------------------------*/
+.restaurant-item-title{
+  text-align: center;
+}
+.restaurant-item-title i{
+  color: #ffc342;
+  padding-right: 3px;
+}
+.restaurant-item-title .star-one{
+  font-size: 10px;
+}
+.restaurant-item-title .star-two{
+  font-size: 12px;
+}
+.restaurant-item-title .star-three{
+  font-size: 14px;
+}
+.restaurant-item-title h1{
+  color: #23355e;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: inline;
+}
+.restaurant-item{
+  margin-top: 30px;
+}
+.restaurant-item .carousel .carousel-inner img{
+  height: 420px;
+}
+.restaurant-item .carousel .carousel-indicator {
+  text-align: center;
+  margin-top: 25px;
+}
+.restaurant-item .carousel .carousel-indicator .carousel-indicator-item-1,.restaurant-item .carousel .carousel-indicator .carousel-indicator-item-2,.restaurant-item .carousel .carousel-indicator .carousel-indicator-item-3{
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 12px;
+  cursor: pointer;
+}
+.restaurant-item-text{
+  font-size: 18px;
+}
+.active-item{
+  opacity: 1;
+}
+.disable-item{
+  opacity: 0.6
+}
+/*-------------------------------------------End of RESTAURANT-ITEM container----------------------------*/
 /*-------------------------------------------This is FOOTER----------------------------------------------*/
 .footer{
   background-color: #4CAF4F;
