got javascript working again

--- a/app/view/restaurants/index.phtml
+++ b/app/view/restaurants/index.phtml
@@ -13,7 +13,7 @@
             <div class="col-md-3 col-12">
 				<ul>
                                     <li class="search-bar">
-                                        <form autocomplete="off" id="search-form" action="http://localhost:81/mywebsite.com/restaurants" method="POST">
+                                        <form autocomplete="off" id="Restaurants" class="search-form" action="http://localhost:81/mywebsite.com/restaurants" method="POST">
                                             <input type="text" placeholder="Search..." name="search" id="search-input">
                                             <button type="submit"><i class="fas fa-search"></i></button>    
                                         </form>						
