--- a/app/view/header.phtml
+++ b/app/view/header.phtml
@@ -13,12 +13,12 @@
 	<link href="/mywebsite.com/public/css/animation.css" rel="stylesheet" type="text/css"/>
         <link href="/mywebsite.com/public/css/main.css" rel="stylesheet" type="text/css"/>
         <link href="/mywebsite.com/public/css/ticket.css" rel="stylesheet" type="text/css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="/mywebsite.com/public/js/main.js" type="text/javascript"></script>
         <script src="/mywebsite.com/public/js/carousel.js" type="text/javascript"></script>
         <script src="/mywebsite.com/public/js/carousel-detail.js" type="text/javascript"></script>
-        <script async src="/mywebsite.com/public/js/script.js" type="text/javascript"></script>        
-        <script src="/mywebsite.com/public/js/autocomplete.js" type="text/javascript"></script>
+        <script src="/mywebsite.com/public/js/search.js" type="text/javascript"></script>           
     </head>
     <body> 
         <ul class="topnav">
@@ -45,7 +45,8 @@
               <button type="button"><a href="#">Sign up</a></button>
               <button type="button"><a href="#">Forget pass ?</a></button>
           </form>       
-        </ul>   
+        </ul>
+        <div class="lds-spinner loading-wrapper"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         <div class="page-content">
   
 
