--- a/public/css/main.css
+++ b/public/css/main.css
@@ -771,13 +771,15 @@ ul.topnav li.right {float: right;}
 /* loading */
 .lds-spinner {
   color: official;
-  display:none;
+  display:block;
   position: absolute;
   width:64px;
   height:64px;
+  transform:translate(-50%,-50%);
   left:50%;
   top:50%;
-  transform:translate(-50%,-50%);
+  z-index: 1;
+  
 }
 .lds-spinner div {
   transform-origin: 32px 32px;
@@ -785,14 +787,14 @@ ul.topnav li.right {float: right;}
 }
 .lds-spinner div:after {
   content: " ";
-  display: block;
+  display: none;
   position: absolute;
   top: 3px;
   left: 29px;
   width: 5px;
-  height: 14px;
+  height: 20px;
   border-radius: 20%;
-  background: #666;
+  background: #4CAF4F;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
